Implementação de um Bot simples no Telegram

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pytelegrambotapi = "^4.20.0"
+python-dotenv = "^1.0.1"
 
+[tool.poetry.scripts]
+bot_telegram = "bot_telegram.main:main"
+
+[tool.poetry.env]
+CHAVE_API = "S7391313820:AAHdpnyJrTet65TwC7vG7u4C-L2Zg2p5TOo"
 
 [build-system]
 requires = ["poetry-core"]
